{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1582,
  "lineage": "3c907055-4554-23f4-c335-a2fa58926618",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:605653682163:instance/i-012e5445374d0505e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012e5445374d0505e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansiblenew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050f83d2444084df5",
            "private_dns": "ip-10-0-0-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.15",
            "public_dns": "ec2-52-55-27-150.compute-1.amazonaws.com",
            "public_ip": "52.55.27.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e20d73e989cb891",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ff1c7e7ebdb4d88",
            "tags": {
              "Name": "web-pub-subnet-1"
            },
            "tags_all": {
              "Name": "web-pub-subnet-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b132d86950cac56"
            ]
          },
          "dependencies": [
            "aws_security_group.instance-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:605653682163:instance/i-00cb3e36dce5f2b11",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cb3e36dce5f2b11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansiblenew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e68f309d0fcff2f1",
            "private_dns": "ip-10-0-1-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.196",
            "public_dns": "ec2-44-195-66-174.compute-1.amazonaws.com",
            "public_ip": "44.195.66.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05441a9d7cc90d905",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01df41f68ce33337b",
            "tags": {
              "Name": "web-pub-subnet-2"
            },
            "tags_all": {
              "Name": "web-pub-subnet-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b132d86950cac56"
            ]
          },
          "dependencies": [
            "aws_security_group.instance-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "pub-subnet-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:605653682163:instance/i-05aa2b911288280ce",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05aa2b911288280ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansiblenew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095f9dd83db740e52",
            "private_dns": "ip-10-0-10-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.223",
            "public_dns": "ec2-18-205-27-230.compute-1.amazonaws.com",
            "public_ip": "18.205.27.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08240cdc7275a89c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3cb63d973c65d4c",
            "tags": {
              "Name": "web-pub-subnet-3"
            },
            "tags_all": {
              "Name": "web-pub-subnet-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b132d86950cac56"
            ]
          },
          "dependencies": [
            "aws_security_group.instance-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:internet-gateway/igw-05c8f86d15e516758",
            "id": "igw-05c8f86d15e516758",
            "owner_id": "605653682163",
            "tags": {
              "Name": "terraforn-igw"
            },
            "tags_all": {
              "Name": "terraforn-igw"
            },
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:loadbalancer/app/terraform-alb/bf861a16a59c970a",
            "arn_suffix": "app/terraform-alb/bf861a16a59c970a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-1858936565.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:605653682163:loadbalancer/app/terraform-alb/bf861a16a59c970a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e35da6f995d9cf0b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01df41f68ce33337b"
              },
              {
                "subnet_id": "subnet-03ff1c7e7ebdb4d88"
              },
              {
                "subnet_id": "subnet-0b3cb63d973c65d4c"
              }
            ],
            "subnets": [
              "subnet-01df41f68ce33337b",
              "subnet-03ff1c7e7ebdb4d88",
              "subnet-0b3cb63d973c65d4c"
            ],
            "vpc_id": "vpc-0ff50acfbf1804f0b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:listener/app/terraform-alb/bf861a16a59c970a/6fc3df9d9ab299cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:605653682163:listener/app/terraform-alb/bf861a16a59c970a/6fc3df9d9ab299cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:loadbalancer/app/terraform-alb/bf861a16a59c970a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-alb",
            "aws_security_group.alb-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:listener/app/terraform-alb/bf861a16a59c970a/bb24563aae456a32",
            "certificate_arn": "arn:aws:acm:us-east-1:605653682163:certificate/0323079b-bd22-418c-8c0c-a733846602d2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:605653682163:listener/app/terraform-alb/bf861a16a59c970a/bb24563aae456a32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:loadbalancer/app/terraform-alb/bf861a16a59c970a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-alb",
            "aws_lb_target_group.terraform-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb",
            "arn_suffix": "targetgroup/terraform/8a9f81ac678c79cb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terraform-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb-20230205141641773700000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb",
            "target_id": "i-012e5445374d0505e"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.terraform-tg",
            "aws_security_group.instance-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb-20230205141641412900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb",
            "target_id": "i-00cb3e36dce5f2b11"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.terraform-tg",
            "aws_security_group.instance-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "pub-subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb-20230205141640976900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:605653682163:targetgroup/terraform/8a9f81ac678c79cb",
            "target_id": "i-05aa2b911288280ce"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.terraform-tg",
            "aws_security_group.instance-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:route-table/rtb-0e877ae4f7bc8000d",
            "id": "rtb-0e877ae4f7bc8000d",
            "owner_id": "605653682163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c8f86d15e516758",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-routetable"
            },
            "tags_all": {
              "Name": "terraform-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026e5f1c9872a93d6",
            "route_table_id": "rtb-0e877ae4f7bc8000d",
            "subnet_id": "subnet-03ff1c7e7ebdb4d88"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073004a544522c77c",
            "route_table_id": "rtb-0e877ae4f7bc8000d",
            "subnet_id": "subnet-01df41f68ce33337b"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform"
          ]
        },
        {
          "index_key": "pub-subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f930b5a754389200",
            "route_table_id": "rtb-0e877ae4f7bc8000d",
            "subnet_id": "subnet-0b3cb63d973c65d4c"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:security-group/sg-0e35da6f995d9cf0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e35da6f995d9cf0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraformalb",
            "name_prefix": "",
            "owner_id": "605653682163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:security-group/sg-06b132d86950cac56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b132d86950cac56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230205141549906300000001",
            "name_prefix": "terraform-",
            "owner_id": "605653682163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-instance-sg"
            },
            "tags_all": {
              "Name": "terraform-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:subnet/subnet-0c2bd0df9b7a0c755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2bd0df9b7a0c755",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605653682163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-priv-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-priv-subnet-1"
            },
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        },
        {
          "index_key": "priv-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:subnet/subnet-02c7e74d967b99be4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c7e74d967b99be4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605653682163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-priv-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-priv-subnet-2"
            },
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:subnet/subnet-03ff1c7e7ebdb4d88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ff1c7e7ebdb4d88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605653682163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-pub-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-pub-subnet-1"
            },
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:subnet/subnet-01df41f68ce33337b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01df41f68ce33337b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605653682163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-pub-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-pub-subnet-2"
            },
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        },
        {
          "index_key": "pub-subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:subnet/subnet-0b3cb63d973c65d4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3cb63d973c65d4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605653682163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-pub-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-pub-subnet-3"
            },
            "vpc_id": "vpc-0ff50acfbf1804f0b"
          },
          "dependencies": [
            "aws_vpc.altschool-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "altschool-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605653682163:vpc/vpc-0ff50acfbf1804f0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b242f54d5b8f149",
            "default_route_table_id": "rtb-0f02a06dc600e20fe",
            "default_security_group_id": "sg-0e07b156c1264c3f1",
            "dhcp_options_id": "dopt-0cab1d27717194456",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff50acfbf1804f0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f02a06dc600e20fe",
            "owner_id": "605653682163",
            "tags": {
              "Name": "altschool-terraform"
            },
            "tags_all": {
              "Name": "altschool-terraform"
            }
          }
        }
      ]
    }
  ]
}